// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MasonryGrid > correct usage > renders all the gutter options 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "-.5rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 2`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "-.25rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 3`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": ".25rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 4`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": ".5rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 5`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 6`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1.25rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 7`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1.5rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 8`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1.75rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 9`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "2rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 10`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "3rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 11`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "4rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 12`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "5rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 13`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "7.5rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 14`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "10rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 15`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "15rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 16`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "20rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders all the gutter options 17`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "30rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders custom minItemWidth 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": "320px",
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders custom minItemWidth as string 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": "32rem",
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > correct usage > renders with theme overrides 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "200px",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with console error with no gutter input 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": undefined,
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with minItemWidth input 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": "1rem",
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid > incorrect usage > renders default with wrong gutter input 1`] = `
<div
  data-bedrock-masonry-grid={true}
  data-br-grid={true}
  style={
    {
      "--gutter": undefined,
      "--minItemWidth": undefined,
      "gridTemplateRows": "1px",
    }
  }
>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
  <div
    style={
      {
        "--rows": 1,
        "gridRow": "span var(--rows, 1)",
      }
    }
  >
    <div
      style={
        {
          "blockSize": "100%",
          "display": "block",
        }
      }
    >
      1
    </div>
  </div>
</div>
`;
